Fix #19917 - [Feature] Created new logisticUnit type

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
@@ -5,6 +5,7 @@ autonum.prefix.controlPlan.code              = PC
 autonum.prefix.finishedProduct.code          = PF
 autonum.prefix.linkedValue.code              = LNK
 autonum.prefix.localSemiFinishedProduct.code = LSF
+autonum.prefix.logisticUnit.code             = LU
 autonum.prefix.packagingKit.code             = KE
 autonum.prefix.packagingMaterial.code        = E
 autonum.prefix.product.code                  = P
