--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -558,6 +558,8 @@ bcpg_bcpgmodel.type.bcpg_lcaList.description                              = List
 bcpg_bcpgmodel.type.bcpg_lcaList.title                                    = Life cycle analysis
 bcpg_bcpgmodel.type.bcpg_localSemiFinishedProduct.description             = Local semi finished
 bcpg_bcpgmodel.type.bcpg_localSemiFinishedProduct.title                   = Local semi finished
+bcpg_bcpgmodel.type.bcpg_logisticUnit.description						  = Logistic unit
+bcpg_bcpgmodel.type.bcpg_logisticUnit.title								  = Logistic unit
 bcpg_bcpgmodel.type.bcpg_microBio.description                             = Microbiological characteristic
 bcpg_bcpgmodel.type.bcpg_microBio.title                                   = Microbiological characteristic
 bcpg_bcpgmodel.type.bcpg_microbio.description                             = List of microbiological characteristics (administration)
