--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -558,6 +558,8 @@ bcpg_bcpgmodel.type.bcpg_lcaList.description                              = List
 bcpg_bcpgmodel.type.bcpg_lcaList.title                                    = Analyses de cycle de vie
 bcpg_bcpgmodel.type.bcpg_localSemiFinishedProduct.description             = Produit semi fini local
 bcpg_bcpgmodel.type.bcpg_localSemiFinishedProduct.title                   = Produit semi fini local
+bcpg_bcpgmodel.type.bcpg_logisticUnit.description						  = Unit\u00E9 logistique
+bcpg_bcpgmodel.type.bcpg_logisticUnit.title								  = Unit\u00E9 logistique
 bcpg_bcpgmodel.type.bcpg_microBio.description                             = Caract\u00E9ristique microbiologique
 bcpg_bcpgmodel.type.bcpg_microBio.title                                   = Caract\u00E9ristique microbiologique
 bcpg_bcpgmodel.type.bcpg_microbio.description                             = Liste des caract\u00E9ristiques microbiologiques (administration)
