--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-pages_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-pages_fr.properties
@@ -24,6 +24,7 @@ menu.create-content.eco                      = Ordre de modification...
 menu.create-content.entity                   = Entit\u00E9...
 menu.create-content.finishedProduct          = Produit fini...
 menu.create-content.localSemiFinishedProduct = Semi-fini (local)...
+menu.create-content.logisticUnit			 = Unit\u00E9 logistique...
 menu.create-content.nc                       = Non conformit\u00E9...
 menu.create-content.packagingKit             = Kit d'emballage...
 menu.create-content.packagingMaterial        = Emballage...
