--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
@@ -158,6 +158,7 @@ type.bcpg_ing                      = Ingr\u00E9dient
 type.bcpg_labelClaim               = All\u00E9gation
 type.bcpg_lca                      = ACV
 type.bcpg_localSemiFinishedProduct = Produit semi fini local
+type.bcpg_logisticUnit			   = Unit\u00E9 logistique
 type.bcpg_microBio                 = Carcat\u00E9ristique microbiologique
 type.bcpg_nut                      = Nutriment
 type.bcpg_organo                   = Caract\u00E9ristique organoleptique
