--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/messages/becpg-project_fr.properties
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/messages/becpg-project_fr.properties
@@ -61,6 +61,8 @@ becpg.forms.set.response-dateDesired.label                 = Date de r\u00E9pons
 becpg.forms.set.response-dateRealized.label                = Date de r\u00E9ponse au client r\u00E9alis\u00E9e
 becpg.forms.set.sampling-date.label                        = Date \u00E9chantillonnage
 becpg.forms.set.subsidiary.label                           = Filiale
+becpg.forms.set.survey-autogeneration.label                = G\u00E9n\u00E9ration automatique
+becpg.forms.set.survey-question.label                      = Question
 becpg.forms.set.tare.label                                 = Tare
 becpg.forms.set.template.label                             = Mod\u00E8le
 becpg.forms.set.transmitter.label                          = Emetteur
