--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
@@ -74,6 +74,7 @@ message.becpg.access.denied                                = #Acc\u00E8s interdi
 message.becpg.export.entity                                = Entit\u00E9
 message.change-order.success                               = Succ\u00E8s de la simulation des entit\u00E9s
 message.constraint.list-value.delete.forbidden             = Il est impossible de supprimer cette valeur car elle est associ\u00E9e \u00E0 une contrainte
+message.datasource.infinite-loop                           = Boucle infinie lors de la g\u00E9n\u00E9ration de la datasource en raison de l'\u00E9l\u00E9ment suivant
 message.element.undeletable                                = L''\u00E9l\u00E9ment est non supprimable : {0}
 #Formulation
 message.formulate.failure                                  = Erreur lors de la formulation du noeud {0}
