--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_en.properties
@@ -78,6 +78,7 @@ message.becpg.access.denied                                = #Access denied#
 message.becpg.export.entity                                = Entity
 message.change-order.success                               = Successful simulation of entities
 message.constraint.list-value.delete.forbidden             = It is impossible to delete this value because it is associated to a constraint
+message.datasource.infinite-loop                           = Infinite loop during datasource generation due to the following item
 message.element.undeletable                                = The element is undeletable : {0}
 #Formulation
 message.formulate.failure                                  = Error formulating entity node {0}
@@ -85,7 +86,6 @@ message.formulate.failure.loop                             = Loop in formulation
 message.report.datasource.size                             = The datasource size ({0}) exceeds {1}
 message.report.error                                       = Error while generating report : {0}
 message.report.image.size                                  = The image ''{0}'' size ({1}) exceeds {2}
-message.report.infinite-loop                               = Infinite loop during report generation
 message.report.params.syntax                               = The report text parameters have a wrong syntax: {0}
 
 #Activities
