--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
@@ -74,6 +74,7 @@ message.becpg.access.denied                                = #Acc\u00E8s interdi
 message.becpg.export.entity                                = Entit\u00E9
 message.change-order.success                               = Succ\u00E8s de la simulation des entit\u00E9s
 message.constraint.list-value.delete.forbidden             = Il est impossible de supprimer cette valeur car elle est associ\u00E9e \u00E0 une contrainte
+message.datasource.infinite-loop                           = Boucle infinie lors de la g\u00E9n\u00E9ration de la datasource en raison de l'\u00E9l\u00E9ment suivant
 message.element.undeletable                                = L''\u00E9l\u00E9ment est non supprimable : {0}
 #Formulation
 message.formulate.failure                                  = Erreur lors de la formulation du noeud {0}
@@ -81,7 +82,6 @@ message.formulate.failure.loop                             = Boucle dans la form
 message.report.datasource.size                             = La taille de la datasource ({0}) d\u00E9passe {1}
 message.report.error                                       = Erreur lors de la g\u00E9n\u00E9ration du rapport : {0}
 message.report.image.size                                  = La taille de l''image ''{0}'' ({1}) d\u00E9passe {2}
-message.report.infinite-loop                               = Boucle infinie durant la g\u00E9n\u00E9ration du rapport
 message.report.params.syntax                               = Les param\u00E8tres texte de rapport ont une mauvaise syntaxe : {0}
 
 #Activities
