Fix #23027 - [Feature] Evaluation cube

--- a/becpg-core/src/main/resources/alfresco/templates/webscripts/fr/becpg/olap/olapSchema_4_0.get_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/templates/webscripts/fr/becpg/olap/olapSchema_4_0.get_fr.properties
@@ -87,6 +87,11 @@ jsolap.entities.caption                  = Toutes les entit\u00E9s li\u00E9es
 jsolap.entities.title                    = Entit\u00E9s
 jsolap.entity.caption                    = Toutes les entit\u00E9s
 jsolap.entity.title                      = Entit\u00E9
+jsolap.entityFamily.title                = Famille d'entit\u00E9
+jsolap.entityState.title                 = Etat de l'entit\u00E9
+jsolap.entitySubFamily.title             = Sous-famille d'entit\u00E9
+jsolap.entityType.caption				 = Tous les types d'entit\u00E9s
+jsolap.entityType.title					 = Type d'entit\u00E9
 jsolap.entryDate.caption                 = Date de cr\u00E9ation
 jsolap.entryDate.title                   = Date de saisie
 jsolap.erpCode.title                     = Code ERP
@@ -239,7 +244,6 @@ jsolap.projectState.title                = \u00C9tat projet
 jsolap.projectSubFamily.title            = Sous-famille projet
 jsolap.projectedQuantity.title           = Quantit\u00E9 pr\u00E9visionnelle
 jsolap.projects.title                    = Projets
-jsolap.projectsEvaluation.title          = Evaluation des projets
 jsolap.projectsNumber.title              = Nombre de projets 
 jsolap.projectsNumberDistinct.title      = Nombre de projets (Distinct)
 jsolap.projectsSteps.caption             = Toutes les \u00E9tapes
