InProgress #23217 -[Feature] Add product list view

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-pages_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-pages_fr.properties
@@ -12,6 +12,8 @@ header.becpg.faceted.search.label = Recherche par facettes...
 header.ecm-auto-record.label      = Enregistrer les modifications
 header.nc-list.description        = Suivi des incidents
 header.nc-list.label              = Suivi des incidents
+header.product-list.description   = Produits
+header.product-list.label         = Produits
 header.wused.search.description   = Recherche par cas d'emploi
 header.wused.search.label         = Recherche par cas d'emploi
 
@@ -24,7 +26,7 @@ menu.create-content.eco                      = Ordre de modification...
 menu.create-content.entity                   = Entit\u00E9...
 menu.create-content.finishedProduct          = Produit fini...
 menu.create-content.localSemiFinishedProduct = Semi-fini (local)...
-menu.create-content.logisticUnit			 = Unit\u00E9 logistique...
+menu.create-content.logisticUnit             = Unit\u00E9 logistique...
 menu.create-content.nc                       = Non conformit\u00E9...
 menu.create-content.packagingKit             = Kit d'emballage...
 menu.create-content.packagingMaterial        = Emballage...
