Fix #23217 -[Feature] Add product list view

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-pages_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-pages_fr.properties
@@ -12,8 +12,8 @@ header.becpg.faceted.search.label = Recherche par facettes...
 header.ecm-auto-record.label      = Enregistrer les modifications
 header.nc-list.description        = Suivi des incidents
 header.nc-list.label              = Suivi des incidents
-header.product-list.description   = Produits
-header.product-list.label         = Produits
+header.product-list.description   = R\u00E9f\u00E9rentiel produits
+header.product-list.label         = R\u00E9f\u00E9rentiel produits
 header.wused.search.description   = Recherche par cas d'emploi
 header.wused.search.label         = Recherche par cas d'emploi
 
