Fix #18331 - [Feature] Add remote rate limiter

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
@@ -46,6 +46,8 @@ beCPG.product.report.showDeprecatedXml.description             = Shows GDA and n
 beCPG.product.searchTemplate.description                       = Allows you to set the default product search template used by Alfresco
 beCPG.project.name.format.description                          = Allows you to define the display format for project names
 beCPG.quality.sampleId.format.description                      = Allows you to define the sample name format for process orders
+beCPG.remote.maxResults.limit.description                      = Maw results limit in remote API
+beCPG.remote.maxResults.limit.type                             = Integer
 beCPG.remote.rateLimiter.capacity.description                  = Number of simultaneous requests allowed in the remote API.
 beCPG.remote.rateLimiter.capacity.type                         = Integer
 beCPG.remote.rateLimiter.refillRate.description                = Rate at which the token bucket refills for the remote API rate limiter.
