--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
@@ -50,6 +50,9 @@ beCPG.remote.rateLimiter.capacity.description                  = Nombre de requ\
 beCPG.remote.rateLimiter.capacity.type                         = Integer
 beCPG.remote.rateLimiter.refillRate.description                = Taux de recharge des jetons pour le limiteur de d\u00E9bit de l'API (jetons/ms).
 beCPG.remote.rateLimiter.refillRate.type                       = Double
+
+beCPG.remote.maxResults.limit.description = Limite maximum de résultats dans l'API
+beCPG.remote.maxResults.limit.type = Integer
 beCPG.report.datasource.maxSizeInBytes.description             = Permet de d\u00E9finir la taille (en octets) de la datasource de rapport \u00E0 partir de laquelle le syst\u00E8me l\u00E8ve une exigence non respect\u00E9e
 beCPG.report.image.maxSizeInBytes.description                  = Permet de d\u00E9finir la taille (en octets) des images de rapport \u00E0 partir de laquelle le syst\u00E8me l\u00E8ve une exigence non respect\u00E9e
 beCPG.report.includeReportInSearch.description                 = Permet d'indexer les rapports pour pouvoir les trouver via la recherche
