Fix #23027 - [Feature] Fixed default measures + changed weightingNote FR label

--- a/becpg-core/src/main/resources/alfresco/templates/webscripts/fr/becpg/olap/olapSchema_4_0.get_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/templates/webscripts/fr/becpg/olap/olapSchema_4_0.get_fr.properties
@@ -322,6 +322,6 @@ jsolap.usersMax.title                    = Connexions max
 jsolap.versionLabel.title                = Num\u00E9ro de version
 jsolap.week.title                        = Semaine
 jsolap.weighting.title                   = Pond\u00E9ration
-jsolap.weightingNote.title               = Note de pond\u00E9ration
+jsolap.weightingNote.title               = Note pond\u00E9r\u00E9e
 jsolap.workload.title                    = Temps budget\u00E9
 jsolap.year.title                        = Ann\u00E9e
