Fix #17671 - [Feature] Add glopProductAspect

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
@@ -6,6 +6,8 @@ aspect.bcpg_chemicalCodeAspect           = Identifiants des substances chimiques
 aspect.bcpg_clientsAspect                = Client
 aspect.bcpg_customsCodeAspect            = Code douanier
 aspect.bcpg_ecoScoreAspect               = Score \u00E9cologique
+aspect.bcpg_evaporableAspect             = \u00C9vaporable
+aspect.bcpg_glopProductAspect            = Aspect optimisation
 aspect.bcpg_meatAspect                   = Aspect viande
 aspect.bcpg_nutrientProfilingScoreAspect = Score nutritionnel
 aspect.bcpg_profitabilityAspect          = Produit - rentabilit\u00E9
@@ -14,7 +16,6 @@ aspect.bcpg_regulatoryAspect             = Aspect conformit\u00E9
 aspect.bcpg_regulatoryCodeAspect         = Aspect code r\u00E8glementaire
 aspect.bcpg_suppliersAspect              = Fournisseur
 aspect.bcpg_undeletableAspect            = Non supprimable
-aspect.bcpg_evaporableAspect                  = \u00C9vaporable
 aspect.ghs_sdsAspect                     = MSDS Aspect
 aspect.gs1_alcoholInformationAspect      = Aspect boisson alcoolis\u00E9e
 aspect.gs1_animalFeedingAspect           = Alimentation des animaux
@@ -113,7 +114,7 @@ product-type.semifinishedproduct      = Semi fini
 
 search.form.desc.bcpg_client               = Recherche des clients
 search.form.desc.bcpg_finishedProduct      = Recherche des produits finis
-search.form.desc.bcpg_logisticUnit		   = Recherche des unit\u00E9s logistiques
+search.form.desc.bcpg_logisticUnit         = Recherche des unit\u00E9s logistiques
 search.form.desc.bcpg_packagingKit         = Recherche des kits d'emballages
 search.form.desc.bcpg_packagingMaterial    = Recherche des emballages
 search.form.desc.bcpg_product              = Recherche de tout type de produits (PF, MP, SF Emballages,...)
@@ -127,7 +128,7 @@ search.form.desc.qa_nc                     = Recherche des non-conformit\u00E9s
 search.form.desc.qa_qualityControl         = Recherche de contr\u00F4les qualit\u00E9s
 search.form.label.bcpg_client              = Client
 search.form.label.bcpg_finishedProduct     = Produit fini
-search.form.label.bcpg_logisticUnit		   = Unit\u00E9 logistique
+search.form.label.bcpg_logisticUnit        = Unit\u00E9 logistique
 search.form.label.bcpg_packagingKit        = Kit d'emballage
 search.form.label.bcpg_packagingMaterial   = Emballage
 search.form.label.bcpg_product             = Produit
@@ -160,7 +161,7 @@ type.bcpg_ing                      = Ingr\u00E9dient
 type.bcpg_labelClaim               = All\u00E9gation
 type.bcpg_lca                      = ACV
 type.bcpg_localSemiFinishedProduct = Produit semi fini local
-type.bcpg_logisticUnit			   = Unit\u00E9 logistique
+type.bcpg_logisticUnit             = Unit\u00E9 logistique
 type.bcpg_microBio                 = Carcat\u00E9ristique microbiologique
 type.bcpg_nut                      = Nutriment
 type.bcpg_organo                   = Caract\u00E9ristique organoleptique
