--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -14,7 +14,10 @@ bcpg_bcpgmodel.aspect.bcpg_eanAspect.title                                = Code
 bcpg_bcpgmodel.aspect.bcpg_ecoScoreAspect.title                           = Aspect score \u00E9cologique
 bcpg_bcpgmodel.aspect.bcpg_erpCodeAspect.description                      = Code ERP
 bcpg_bcpgmodel.aspect.bcpg_erpCodeAspect.title                            = Code ERP
+bcpg_bcpgmodel.aspect.bcpg_evaporableAspect.description                   = Aspect \u00E9vaporable 
+bcpg_bcpgmodel.aspect.bcpg_evaporableAspect.title                         = Aspect \u00E9vaporable
 bcpg_bcpgmodel.aspect.bcpg_finishedProductAspect.title                    = Aspect permettant de renseigner les informations d'un produit fini
+bcpg_bcpgmodel.aspect.bcpg_glopProductAspect.title                        = Aspect optimisation
 bcpg_bcpgmodel.aspect.bcpg_lcaScoreAspect.title                           = Aspect score ACV
 bcpg_bcpgmodel.aspect.bcpg_manufacturingAspect.description                = Information sur le site de fabrication
 bcpg_bcpgmodel.aspect.bcpg_manufacturingAspect.title                      = Produit - site de fabrication
@@ -39,8 +42,6 @@ bcpg_bcpgmodel.aspect.bcpg_svhcAspect.title                               = Subs
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.description               = Produit transform\u00E9
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.title                     = Produit transform\u00E9
 bcpg_bcpgmodel.aspect.bcpg_undeletableAspect.description                  = Non supprimable
-bcpg_bcpgmodel.aspect.bcpg_evaporableAspect.description                        = Aspect \u00E9vaporable 
-bcpg_bcpgmodel.aspect.bcpg_evaporableAspect.title                              = Aspect \u00E9vaporable
 bcpg_bcpgmodel.association.bcpg_advAlInVolAnd.title                       = Allerg\u00E8nes pr\u00E9sents fortuitement
 bcpg_bcpgmodel.association.bcpg_advAlInVolNot.title                       = Allerg\u00E8nes non pr\u00E9sents fortuitement
 bcpg_bcpgmodel.association.bcpg_advAlVolAnd.title                         = Allerg\u00E8nes pr\u00E9sents volontairement
@@ -76,6 +77,7 @@ bcpg_bcpgmodel.association.bcpg_filBioOrigins.title                       = Orig
 bcpg_bcpgmodel.association.bcpg_filGeoOrigins.title                       = Origines g\u00E9o
 bcpg_bcpgmodel.association.bcpg_filIngs.title                             = Ingr\u00E9dients
 bcpg_bcpgmodel.association.bcpg_filRequiredGeoOrigins.title               = Origines g\u00E9o requises
+bcpg_bcpgmodel.association.bcpg_glopTargetCharact.title                   = Cible d'optimisation
 bcpg_bcpgmodel.association.bcpg_illGrp.title                              = Regroupement
 bcpg_bcpgmodel.association.bcpg_ingAllergens.title                        = Allerg\u00E8nes
 bcpg_bcpgmodel.association.bcpg_ingListBioOrigin.title                    = Origine biologique
@@ -257,8 +259,12 @@ bcpg_bcpgmodel.property.bcpg_formulatedDate.title                         = Date
 bcpg_bcpgmodel.property.bcpg_geoOriginISOCode.title                       = Code ISO
 bcpg_bcpgmodel.property.bcpg_geoOriginISOCodeNumeric.title                = Code ISO num.
 bcpg_bcpgmodel.property.bcpg_geoOriginISOCodeThreeLetters.title           = Code ISO 3
+bcpg_bcpgmodel.property.bcpg_glopApplyOptimization.title                  = Appliquer l'optimisation
+bcpg_bcpgmodel.property.bcpg_glopConstraintLists.title                    = Listes \u00E0 optimiser
 bcpg_bcpgmodel.property.bcpg_glopTarget.title                             = Cible d'optimisation
-bcpg_bcpgmodel.property.bcpg_glopValue.title                              = Valeur d'optimisation
+bcpg_bcpgmodel.property.bcpg_glopTargetTask.title                         = T\u00E2che d'optimisation
+bcpg_bcpgmodel.property.bcpg_glopTolerance.title                          = Tol\u00E9rance d'optimisation (%)
+bcpg_bcpgmodel.property.bcpg_glopValue.title                              = R\u00E9sultat d'optimisation
 bcpg_bcpgmodel.property.bcpg_illLogValue.title                            = Journal
 bcpg_bcpgmodel.property.bcpg_illManualValue.title                         = Etiquette retravaill\u00E9e
 bcpg_bcpgmodel.property.bcpg_illValue.title                               = Etiquette
@@ -558,8 +564,8 @@ bcpg_bcpgmodel.type.bcpg_lcaList.description                              = List
 bcpg_bcpgmodel.type.bcpg_lcaList.title                                    = Analyses de cycle de vie
 bcpg_bcpgmodel.type.bcpg_localSemiFinishedProduct.description             = Produit semi fini local
 bcpg_bcpgmodel.type.bcpg_localSemiFinishedProduct.title                   = Produit semi fini local
-bcpg_bcpgmodel.type.bcpg_logisticUnit.description						  = Unit\u00E9 logistique
-bcpg_bcpgmodel.type.bcpg_logisticUnit.title								  = Unit\u00E9 logistique
+bcpg_bcpgmodel.type.bcpg_logisticUnit.description                         = Unit\u00E9 logistique
+bcpg_bcpgmodel.type.bcpg_logisticUnit.title                               = Unit\u00E9 logistique
 bcpg_bcpgmodel.type.bcpg_microBio.description                             = Caract\u00E9ristique microbiologique
 bcpg_bcpgmodel.type.bcpg_microBio.title                                   = Caract\u00E9ristique microbiologique
 bcpg_bcpgmodel.type.bcpg_microbio.description                             = Liste des caract\u00E9ristiques microbiologiques (administration)
