Fix #20640 - [Feature] Added svhcList to customLists

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-charact-views/formulation-view.get_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-charact-views/formulation-view.get_fr.properties
@@ -22,6 +22,7 @@ dashlet.customList.organoList.title          = Organoleptique
 dashlet.customList.packMaterialList.title    = Mat\u00E9riaux
 dashlet.customList.physicoChemList.title     = Physico-chimiques 
 dashlet.customList.processList.title         = Liste des process
+dashlet.customList.svhcList.title			 = Substances dangereuses
 dashlet.customList.title                     = Liste personnalis\u00E9e
 dashlet.dynamicCharactList.colCheckbox       = Afficher les colonnes dynamiques
 dashlet.dynamicCharactList.title             = Caract\u00E9ristiques formul\u00E9es
