--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -629,7 +629,7 @@ bcpg_bcpgmodel.type.bcpg_subsidiary.title                                 = Fili
 bcpg_bcpgmodel.type.bcpg_supplier.description                             = Fournisseur
 bcpg_bcpgmodel.type.bcpg_supplier.title                                   = Fournisseur
 bcpg_bcpgmodel.type.bcpg_svhcList.description                             = Substances extr\u00EAmement pr\u00E9occupantes
-bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Substances dangeureuses
+bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Substances dangereuses
 bcpg_bcpgmodel.type.bcpg_trademark.description                            = Liste des marques (administration)
 bcpg_bcpgmodel.type.bcpg_trademark.title                                  = Marques
 
