--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_en.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_en.properties
@@ -250,7 +250,7 @@ data.state.tovalidate                         = To validate
 data.state.treatment                          = Treatment
 data.state.valid                              = Valid
 
-date.format = mm/dd/yyyy
+date.format = dd/mm/yyyy
 
 entity.activity.after           = After
 entity.activity.before          = Before
@@ -266,6 +266,7 @@ entity.activity.datalist.delete = Deleted {0} in the {1} list
 entity.activity.datalist.simple = Modified the {0} list
 entity.activity.datalist.update = Modified {0} in the {1} list
 entity.activity.entity          = Modified the properties of {0} entity
+entity.activity.export          = Exported the {0} list in file '{1}'
 entity.activity.formulation     = {0} has been formulated
 entity.activity.merge           = Merged the version {0}
 entity.activity.property        = Property
