Fix #23716 - [Bug] Fix decorate in renderFlatHtmlTable

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-controls_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-controls_fr.properties
@@ -34,6 +34,7 @@ locale.name.ar_SD  = Arabe - Soudan
 locale.name.ar_SY  = Arabe - Syrie
 locale.name.ar_TN  = Arabe - Tunisie
 locale.name.ar_YE  = Arabe - Y\u00E9men
+locale.name.az_AZ  = Azerba\u00EFdjanais -Azerba\u00EFjan
 locale.name.be     = Bi\u00E9lorusse
 locale.name.be_BY  = Bi\u00E9lorusse - Bi\u00E9lo-Russie
 locale.name.bem_ZM = Bemba - Zambie
