Fix #23595 - [Bug] Add missing comment count on certification list

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-process/entity-process.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-process/entity-process.get_fr.properties
@@ -19,3 +19,4 @@ process.state.InProgress = En cours
 process.state.OnHold     = En attente
 process.state.Planned    = Planifi\u00E9
 process.state.active     = Actif
+process.state.archived   = Archived
