--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
@@ -175,6 +175,7 @@ becpg.forms.set.ings-criteria.label                            = Crit\u00E8res s
 becpg.forms.set.innerPack.label                                = Sous conditionnement
 becpg.forms.set.language.label                                 = Langues
 becpg.forms.set.launch-dateDesired.label                       = Date de lancement souhait\u00E9
+becpg.forms.set.lca-criteria.label                             = Crit\u00E8res sur l'analyse cycle de vie
 becpg.forms.set.lca.score.label                                = Score ACV
 becpg.forms.set.location.label                                 = Localisation
 becpg.forms.set.marketing.label                                = Marketing
@@ -209,11 +210,14 @@ becpg.forms.set.product.name                                   = Nom du produit
 becpg.forms.set.promotional.label                              = Promotion
 becpg.forms.set.publication.label                              = Publication
 becpg.forms.set.regulatory.label                               = Conformit\u00E9
+becpg.forms.set.score-criteria.label                           = Crit\u00E8res sur les \u00E9valuations
 becpg.forms.set.season.label                                   = Saison
 becpg.forms.set.secondaryPackaging.label                       = Unit\u00E9 logistique
 becpg.forms.set.security.label                                 = S\u00E9curit\u00E9
 becpg.forms.set.securityRule.label                             = R\u00E8gle de s\u00E9curit\u00E9
 becpg.forms.set.selected-products.label                        = S\u00E9lection des produits
+becpg.forms.set.survey-criteria.label                          = Crit\u00E8res sur les questionnaires
+becpg.forms.set.svhc-criteria.label                            = Crit\u00E8res sur les substances dangereuses
 becpg.forms.set.tertiaryPackaging.label                        = Palettisation
 becpg.forms.set.variableTradeItem.label                        = Article variable
 becpg.forms.unit.L                                             = L
