Fix #23048 - [Bug] Fix typo for allergen requirement

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -326,7 +326,7 @@ message.decernis.ingredient.notListed                = Ingr\u00E9dients non list
 message.decernis.ingredient.permitted                = {0} {1}
 message.decernis.ingredient.prohibited               = Ingr\u00E9dients interdits {0}
 message.decernis.ingredient.severalRid               = Plusieurs RID trouv\u00E9s pour ces ingr\u00E9dients
-message.formulate.allergen.error.empty               = Allergen non renseign\u00E9
+message.formulate.allergen.error.empty               = Allerg\u00E8ne non renseign\u00E9
 message.formulate.allergen.error.nullQtyPerc         = Impossible de calculer le pourcentage de l''allerg\u00E8ne {0}: pourcentage non renseign\u00E9 sur certaines entit\u00E9es.
 message.formulate.allergen.forbidden                 = Allerg\u00E8ne interdit : {0}
 message.formulate.allergen.notValidated              = Les allerg\u00E8nes ne sont pas valid\u00E9s
