--- a/becpg-integration-runner/src/test/resources/beCPG/translations/plm_fr.properties
+++ b/becpg-integration-runner/src/test/resources/beCPG/translations/plm_fr.properties
@@ -138,7 +138,7 @@ message.formulate.labelClaim.notClaimed              = L''all\u00E9gation ''{0}'
 message.formulate.labelClaim.value.false             = non revendiqu\u00E9e
 message.formulate.labelClaim.value.suitable          = adapt\u00E9
 message.formulate.labelClaim.value.true              = revendiqu\u00E9e
-message.formulate.labelRule.error                    = Erreur lors de la formulation de l''\u00E9tiquatage ''{0}'': - {1}
+message.formulate.labelRule.error                    = Erreur lors de la formulation de l''\u00E9tiquetage ''{0}'': - {1}
 message.formulate.labelRule.error.nullIng            = Impossible de d\u00E9clarer ou d''aggreger l''ingr\u00E9dient {0} sans quantit\u00E9, changer le type de d\u00E9claration du composant
 message.formulate.mandatory_property                 = Champ obligatoire ''{0}'' manquant (catalogue ''{1}'')
 message.formulate.mandatory_property_localized       = Champ obligatoire ''{0}'' {2} manquant (catalogue ''{1}'')
