--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -350,7 +350,7 @@ message.formulate.labelClaim.value.certified         = certifi\u00E9e
 message.formulate.labelClaim.value.false             = non revendiqu\u00E9e
 message.formulate.labelClaim.value.suitable          = adapt\u00E9
 message.formulate.labelClaim.value.true              = revendiqu\u00E9e
-message.formulate.labelRule.error                    = Erreur lors de la formulation de l''\u00E9tiquatage ''{0}'': - {1}
+message.formulate.labelRule.error                    = Erreur lors de la formulation de l''\u00E9tiquetage ''{0}'': - {1}
 message.formulate.labelRule.error.nullIng            = Impossible de d\u00E9clarer ou d''aggreger l''ingr\u00E9dient {0} sans quantit\u00E9, changer le type de d\u00E9claration du composant
 message.formulate.lca.formulated                     = Formulation
 message.formulate.lcaList.error                      = Erreur lors de la formulation de l'ACV ''{0}'': - {1}
