Fix #23648 - [Feature] Add activity for copy list

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
@@ -251,27 +251,30 @@ data.state.valid                              = Valid\u00E9
 
 date.format = dd/mm/yyyy
 
-entity.activity.after           = Apr\u00E8s
-entity.activity.before          = Avant
-entity.activity.changeorder     = L'entit\u00E9 a \u00E9t\u00E9 modif\u00E9e par l'ordre de modification {0}
-entity.activity.comment.create  = A cr\u00E9\u00E9 le commentaire sur {0}
-entity.activity.comment.delete  = A supprim\u00E9 le commentaire sur {0}
-entity.activity.comment.update  = A mis \u00E0 jour  le commentaire sur {0}
-entity.activity.content.create  = A ajout\u00E9 le contenu {0}
-entity.activity.content.delete  = A supprim\u00E9 le contenu  {0}
-entity.activity.content.update  = A mis \u00E0 jour le {0}
-entity.activity.datalist.create = A ajout\u00E9 {0} dans la liste {1} 
-entity.activity.datalist.delete = A supprim\u00E9 {0} dans la liste {1} 
-entity.activity.datalist.simple = A modifi\u00E9 la liste {0}
-entity.activity.datalist.update = A modifi\u00E9 {0} dans la liste {1} 
-entity.activity.entity          = A modifi\u00E9 les propri\u00E9t\u00E9s de l'entit\u00E9 {0} 
-entity.activity.export          = A export\u00E9 la liste {0} dans le fichier '{1}'
-entity.activity.formulation     = A formul\u00E9 {0} 
-entity.activity.merge           = A rang\u00E9 la version {0}
-entity.activity.property        = Propri\u00E9t\u00E9
-entity.activity.report          = A g\u00E9n\u00E9r\u00E9 les rapports de l'entit\u00E9 {0}
-entity.activity.state.change    = A chang\u00E9 l'\u00E9tat de {0} de <b>{1}</b> \u00E0 <b>{2}</b>
-entity.activity.version         = A cr\u00E9\u00E9 la version {1}
+entity.activity.after                  = Apr\u00E8s
+entity.activity.before                 = Avant
+entity.activity.changeorder            = L'entit\u00E9 a \u00E9t\u00E9 modif\u00E9e par l'ordre de modification {0}
+entity.activity.comment.create         = A cr\u00E9\u00E9 le commentaire sur {0}
+entity.activity.comment.delete         = A supprim\u00E9 le commentaire sur {0}
+entity.activity.comment.update         = A mis \u00E0 jour  le commentaire sur {0}
+entity.activity.content.create         = A ajout\u00E9 le contenu {0}
+entity.activity.content.delete         = A supprim\u00E9 le contenu  {0}
+entity.activity.content.update         = A mis \u00E0 jour le {0}
+entity.activity.datalist.copy.add      = A ajout\u00E9 la liste {0} depuis l'entit\u00E9 {1}
+entity.activity.datalist.copy.merge    = A fusionn\u00E9 la liste {0} depuis l'entit\u00E9 {1}
+entity.activity.datalist.copy.override = A \u00E9cras\u00E9 la liste {0} depuis l'entit\u00E9 {1}
+entity.activity.datalist.create        = A ajout\u00E9 {0} dans la liste {1} 
+entity.activity.datalist.delete        = A supprim\u00E9 {0} dans la liste {1} 
+entity.activity.datalist.simple        = A modifi\u00E9 la liste {0}
+entity.activity.datalist.update        = A modifi\u00E9 {0} dans la liste {1} 
+entity.activity.entity                 = A modifi\u00E9 les propri\u00E9t\u00E9s de l'entit\u00E9 {0} 
+entity.activity.export                 = A export\u00E9 la liste {0} dans le fichier '{1}'
+entity.activity.formulation            = A formul\u00E9 {0} 
+entity.activity.merge                  = A rang\u00E9 la version {0}
+entity.activity.property               = Propri\u00E9t\u00E9
+entity.activity.report                 = A g\u00E9n\u00E9r\u00E9 les rapports de l'entit\u00E9 {0}
+entity.activity.state.change           = A chang\u00E9 l'\u00E9tat de {0} de <b>{1}</b> \u00E0 <b>{2}</b>
+entity.activity.version                = A cr\u00E9\u00E9 la version {1}
 
 filterform.clear  = Effacer
 filterform.header = Filtre
