--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_en_US.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_en_US.properties
@@ -252,27 +252,30 @@ data.state.valid                              = Valid
 
 date.format = mm/dd/yyyy
 
-entity.activity.after           = After
-entity.activity.before          = Before
-entity.activity.changeorder     = The entity was modified by change order {0}
-entity.activity.comment.create  = Comment created on {0}
-entity.activity.comment.delete  = Comment deleted on {0}
-entity.activity.comment.update  = Comment updated on {0}
-entity.activity.content.create  = Content created on  project {0}
-entity.activity.content.delete  = Content deleted on  project {0}
-entity.activity.content.update  = Content updated on  project {0}
-entity.activity.datalist.create = Added {0} to the {1} list
-entity.activity.datalist.delete = Deleted {0} in the {1} list
-entity.activity.datalist.simple = Modified the {0} list
-entity.activity.datalist.update = Modified {0} in the {1} list
-entity.activity.entity          = Modified the properties of {0} entity
-entity.activity.export          = Exported the {0} list in file '{1}'
-entity.activity.formulation     = {0} has been formulated
-entity.activity.merge           = Merged the version {0}
-entity.activity.property        = Property
-entity.activity.report          = Report has been generated on {0}
-entity.activity.state.change    = Changed the state of {0} from  <b>{1}</b> to <b>{2}</b>
-entity.activity.version         = Create {1} version
+entity.activity.after                  = After
+entity.activity.before                 = Before
+entity.activity.changeorder            = The entity was modified by change order {0}
+entity.activity.comment.create         = Comment created on {0}
+entity.activity.comment.delete         = Comment deleted on {0}
+entity.activity.comment.update         = Comment updated on {0}
+entity.activity.content.create         = Content created on  project {0}
+entity.activity.content.delete         = Content deleted on  project {0}
+entity.activity.content.update         = Content updated on  project {0}
+entity.activity.datalist.copy.add      = Added the {0} list from entity {1}
+entity.activity.datalist.copy.merge    = Merged the {0} list from entity {1}
+entity.activity.datalist.copy.override = Overrided the {0} list from entity {1}
+entity.activity.datalist.create        = Added {0} to the {1} list
+entity.activity.datalist.delete        = Deleted {0} in the {1} list
+entity.activity.datalist.simple        = Modified the {0} list
+entity.activity.datalist.update        = Modified {0} in the {1} list
+entity.activity.entity                 = Modified the properties of {0} entity
+entity.activity.export                 = Exported the {0} list in file '{1}'
+entity.activity.formulation            = {0} has been formulated
+entity.activity.merge                  = Merged the version {0}
+entity.activity.property               = Property
+entity.activity.report                 = Report has been generated on {0}
+entity.activity.state.change           = Changed the state of {0} from  <b>{1}</b> to <b>{2}</b>
+entity.activity.version                = Create {1} version
 
 filterform.clear  = Clear
 filterform.header = Filter
