--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
@@ -1,23 +1,43 @@
 
-survey_surveymodel.association.survey_nextQuestion.title      = Question suivante
-survey_surveymodel.association.survey_slChoices.title         = Choix retenu
-survey_surveymodel.association.survey_slQuestion.title        = Question
-survey_surveymodel.property.survey_questionCriterion.title    = Crit\u00E8re
-survey_surveymodel.property.survey_questionIsMandatory.title  = Obligatoire ?
-survey_surveymodel.property.survey_questionIsVisible.title    = Visible ?
-survey_surveymodel.property.survey_questionLabel.title        = Libell\u00E9
-survey_surveymodel.property.survey_questionLowerNote.title    = Note inf\u00E9rieure
-survey_surveymodel.property.survey_questionNote.title         = Note
-survey_surveymodel.property.survey_questionScore.title        = Score
-survey_surveymodel.property.survey_questionType.title         = Crit\u00E8res d'\u00E9valuation
-survey_surveymodel.property.survey_questionUpperNote.title    = Note sup\u00E9rieure
-survey_surveymodel.property.survey_questionUrl.title          = Url
-survey_surveymodel.property.survey_responseCommentLabel.title = Label du commentaire
-survey_surveymodel.property.survey_responseCommentType.title  = Type de commentaire
-survey_surveymodel.property.survey_responseType.title         = Type de r\u00E9ponse
-survey_surveymodel.property.survey_slComment.title            = Commentaire
-survey_surveymodel.property.survey_slResponse.title           = Autre r\u00E9ponse
-survey_surveymodel.type.survey_surveyList.description         = Permet d'ajouter un questionnaire sur une entit\u00E9
-survey_surveymodel.type.survey_surveyList.title               = Questionnaire
-survey_surveymodel.type.survey_surveyQuestion.description     = Questionnaires (Administration)
-survey_surveymodel.type.survey_surveyQuestion.title           = Questionnaires 
+bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion1.title          	= Question 1
+bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion2.title          	= Question 2
+bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion3.title          	= Question 3
+bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion4.title            = Question 4
+bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion5.title            = Question 5
+bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion6.title            = Question 6
+bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion7.title            = Question 7
+bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion8.title            = Question 8
+bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion9.title            = Question 9
+bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion10.title           = Question 10
+bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer1.title              = R\u00E9ponse 1
+bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer2.title              = R\u00E9ponse 2
+bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer3.title              = R\u00E9ponse 3
+bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer4.title              = R\u00E9ponse 4
+bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer5.title              = R\u00E9ponse 5
+bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer6.title              = R\u00E9ponse 6
+bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer7.title              = R\u00E9ponse 7
+bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer8.title              = R\u00E9ponse 8
+bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer9.title              = R\u00E9ponse 9
+bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer10.title             = R\u00E9ponse 10
+survey_surveymodel.association.survey_nextQuestion.title                    = Question suivante
+survey_surveymodel.association.survey_slChoices.title                       = Choix retenu
+survey_surveymodel.association.survey_slQuestion.title                      = Question
+survey_surveymodel.property.survey_questionCriterion.title                  = Crit\u00E8re
+survey_surveymodel.property.survey_questionIsMandatory.title                = Obligatoire ?
+survey_surveymodel.property.survey_questionIsVisible.title                  = Visible ?
+survey_surveymodel.property.survey_questionLabel.title                      = Libell\u00E9
+survey_surveymodel.property.survey_questionLowerNote.title                  = Note inf\u00E9rieure
+survey_surveymodel.property.survey_questionNote.title                       = Note
+survey_surveymodel.property.survey_questionScore.title                      = Score
+survey_surveymodel.property.survey_questionType.title                       = Crit\u00E8res d'\u00E9valuation
+survey_surveymodel.property.survey_questionUpperNote.title                  = Note sup\u00E9rieure
+survey_surveymodel.property.survey_questionUrl.title                        = Url
+survey_surveymodel.property.survey_responseCommentLabel.title               = Label du commentaire
+survey_surveymodel.property.survey_responseCommentType.title                = Type de commentaire
+survey_surveymodel.property.survey_responseType.title                       = Type de r\u00E9ponse
+survey_surveymodel.property.survey_slComment.title                          = Commentaire
+survey_surveymodel.property.survey_slResponse.title                         = Autre r\u00E9ponse
+survey_surveymodel.type.survey_surveyList.description                       = Permet d'ajouter un questionnaire sur une entit\u00E9
+survey_surveymodel.type.survey_surveyList.title                             = Questionnaire
+survey_surveymodel.type.survey_surveyQuestion.description                   = Questionnaires (Administration)
+survey_surveymodel.type.survey_surveyQuestion.title                         = Questionnaires 
