Fix #21353 - [Feature] Add synchronize SSO

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -92,6 +92,7 @@ label.revert                 = R\u00E9tablir
 label.saml                   = Connectez-vous avec SSO...
 label.select-columns.title   = Choisissez les colonnes \u00E0 afficher
 label.supplier-account.title = Adresse email du fournisseur
+label.synchronizesso         = Synchroniser le SSO
 label.usercontentlocale      = Langue du contenu
 label.userlocale             = Langue de l'interface
 
