Fix #23811 - [Bug] Missing i18n key

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-controls_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-controls_fr.properties
@@ -12,6 +12,7 @@ autocomplete.pagination.template.page-report  = Affichage des \u00E9l\u00E9ments
 
 beCPG.forms.validation.GTIN.message               = La valeur n'est pas un GTIN/EAN valide
 beCPG.forms.validation.checkEmailValidity.message = La valeur n'est pas un email valide
+beCPG.forms.validation.mandatoryIf.message= Le champ est obligatoire
 
 form.field.locale = Editer le champ multi-langue
 
