--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
@@ -57,7 +57,7 @@ fm_forummodel.property.fm_commentsRollup.title = Nb de commentaires
 
 fr.becpg.entity.state-changed = {1} a chang\u00E9 l''\u00E9tat de l''entit\u00E9 {0} de  {2} \u00E0 {3}
 
-integrity-checker.association-multiplicity-error = Impossible de supprimer l''\u00E9l\u00E9ment car il est utilis\u00E9 dans le syst\u00E8me par: {0}
+integrity-checker.association-multiplicity-error = Erreur de multiplicit\u00E9 de cible d''association pour : {0}
 integrity-checker.constraint-error               = Une erreur de contrainte est apparue, merci de v\u00E9rifier vos listes d''administrations pour v\u00E9rifier qu''aucune valeur n''a \u00E9t\u00E9 supprim\u00E9e (ex: type de mat\u00E9riau). D\u00E9tails: {0}
 
 message.async-mail.entitiesTemplate.formulate.body         = La formulation des entit\u00E9s 
