Fix #22457 - [Feature] All search exports

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
@@ -111,33 +111,35 @@ product-type.rawmaterial              = Mati\u00E8re premi\u00E8re
 product-type.resourceproduct          = Ressource
 product-type.semifinishedproduct      = Semi fini
 
-search.form.desc.bcpg_client               = Recherche des clients
-search.form.desc.bcpg_finishedProduct      = Recherche des produits finis
-search.form.desc.bcpg_packagingKit         = Recherche des kits d'emballages
-search.form.desc.bcpg_packagingMaterial    = Recherche des emballages
-search.form.desc.bcpg_product              = Recherche de tout type de produits (PF, MP, SF Emballages,...)
-search.form.desc.bcpg_productCollection    = Recherche des collections
-search.form.desc.bcpg_rawMaterial          = Rechercher des mati\u00E8res premi\u00E8res
-search.form.desc.bcpg_resourceProduct      = Recherche des ressources
-search.form.desc.bcpg_semiFinishedProduct  = Recherche des produits semi finis
-search.form.desc.bcpg_supplier             = Recherche des fournisseurs
-search.form.desc.qa_batch                  = Recherche des ordres de fabrication
-search.form.desc.qa_nc                     = Recherche des non-conformit\u00E9s
-search.form.desc.qa_qualityControl         = Recherche de contr\u00F4les qualit\u00E9s
-search.form.label.bcpg_client              = Client
-search.form.label.bcpg_finishedProduct     = Produit fini
-search.form.label.bcpg_packagingKit        = Kit d'emballage
-search.form.label.bcpg_packagingMaterial   = Emballage
-search.form.label.bcpg_product             = Produit
+search.form.desc.bcpg_client                = Recherche des clients
+search.form.desc.bcpg_finishedProduct       = Recherche des produits finis
+search.form.desc.bcpg_packagingKit          = Recherche des kits d'emballages
+search.form.desc.bcpg_packagingMaterial     = Recherche des emballages
+search.form.desc.bcpg_product               = Recherche de tout type de produits (PF, MP, SF Emballages,...)
+search.form.desc.bcpg_productCollection     = Recherche des collections
+search.form.desc.bcpg_productSpecification  = Recherche des sp\u00E9cifications produit
+search.form.desc.bcpg_rawMaterial           = Rechercher des mati\u00E8res premi\u00E8res
+search.form.desc.bcpg_resourceProduct       = Recherche des ressources
+search.form.desc.bcpg_semiFinishedProduct   = Recherche des produits semi finis
+search.form.desc.bcpg_supplier              = Recherche des fournisseurs
+search.form.desc.qa_batch                   = Recherche des ordres de fabrication
+search.form.desc.qa_nc                      = Recherche des non-conformit\u00E9s
+search.form.desc.qa_qualityControl          = Recherche de contr\u00F4les qualit\u00E9s
+search.form.label.bcpg_client               = Client
+search.form.label.bcpg_finishedProduct      = Produit fini
+search.form.label.bcpg_packagingKit         = Kit d'emballage
+search.form.label.bcpg_packagingMaterial    = Emballage
+search.form.label.bcpg_product              = Produit
 # search
-search.form.label.bcpg_productCollection   = Collection
-search.form.label.bcpg_rawMaterial         = Mati\u00E8re premi\u00E8re
-search.form.label.bcpg_resourceProduct     = Ressource
-search.form.label.bcpg_semiFinishedProduct = Produit semi fini
-search.form.label.bcpg_supplier            = Fournisseur
-search.form.label.qa_batch                 = Ordre de fabrication
-search.form.label.qa_nc                    = Non-conformit\u00E9
-search.form.label.qa_qualityControl        = Contr\u00F4le qualit\u00E9
+search.form.label.bcpg_productCollection    = Collection
+search.form.label.bcpg_productSpecification = Sp\u00E9cification produit
+search.form.label.bcpg_rawMaterial          = Mati\u00E8re premi\u00E8re
+search.form.label.bcpg_resourceProduct      = Ressource
+search.form.label.bcpg_semiFinishedProduct  = Produit semi fini
+search.form.label.bcpg_supplier             = Fournisseur
+search.form.label.qa_batch                  = Ordre de fabrication
+search.form.label.qa_nc                     = Non-conformit\u00E9
+search.form.label.qa_qualityControl         = Contr\u00F4le qualit\u00E9
 
 status.ecm-applied          = Appliqu\u00E9
 status.ecm-automatic        = Automatique
