--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_en.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_en.properties
@@ -105,32 +105,34 @@ product-type.rawmaterial              = Raw material
 product-type.resourceproduct          = Resource
 product-type.semifinishedproduct      = Semi finished
 
-search.form.desc.bcpg_client               = Search client
-search.form.desc.bcpg_finishedProduct      = Search finished product
-search.form.desc.bcpg_packagingKit         = Search packaging kit
-search.form.desc.bcpg_packagingMaterial    = Search packaging material
-search.form.desc.bcpg_product              = Search any type of products (fp, mp, sf, packaging, ...)
-search.form.desc.bcpg_productCollection    = Search collections
-search.form.desc.bcpg_rawMaterial          = Search raw material
-search.form.desc.bcpg_resourceProduct      = Search resource
-search.form.desc.bcpg_semiFinishedProduct  = Search semi finished product
-search.form.desc.bcpg_supplier             = Search supplier
-search.form.desc.qa_batch                  = Search process order
-search.form.desc.qa_nc                     = Search non-conformities
-search.form.desc.qa_qualityControl         = Search quality control
-search.form.label.bcpg_client              = Client
-search.form.label.bcpg_finishedProduct     = Finished product
-search.form.label.bcpg_packagingKit        = Packaging kit
-search.form.label.bcpg_packagingMaterial   = Packaging material
-search.form.label.bcpg_product             = Products
-search.form.label.bcpg_productCollection   = Collection
-search.form.label.bcpg_rawMaterial         = Raw material
-search.form.label.bcpg_resourceProduct     = Resource
-search.form.label.bcpg_semiFinishedProduct = Semi finished product
-search.form.label.bcpg_supplier            = Supplier
-search.form.label.qa_batch                 = Process order
-search.form.label.qa_nc                    = Non-conformities
-search.form.label.qa_qualityControl        = Quality control
+search.form.desc.bcpg_client                = Search client
+search.form.desc.bcpg_finishedProduct       = Search finished product
+search.form.desc.bcpg_packagingKit          = Search packaging kit
+search.form.desc.bcpg_packagingMaterial     = Search packaging material
+search.form.desc.bcpg_product               = Search any type of products (fp, mp, sf, packaging, ...)
+search.form.desc.bcpg_productCollection     = Search collections
+search.form.desc.bcpg_productSpecification  = Search specifications
+search.form.desc.bcpg_rawMaterial           = Search raw material
+search.form.desc.bcpg_resourceProduct       = Search resource
+search.form.desc.bcpg_semiFinishedProduct   = Search semi finished product
+search.form.desc.bcpg_supplier              = Search supplier
+search.form.desc.qa_batch                   = Search process order
+search.form.desc.qa_nc                      = Search non-conformities
+search.form.desc.qa_qualityControl          = Search quality control
+search.form.label.bcpg_client               = Client
+search.form.label.bcpg_finishedProduct      = Finished product
+search.form.label.bcpg_packagingKit         = Packaging kit
+search.form.label.bcpg_packagingMaterial    = Packaging material
+search.form.label.bcpg_product              = Products
+search.form.label.bcpg_productCollection   	= Collection
+search.form.label.bcpg_productSpecification = Specification
+search.form.label.bcpg_rawMaterial          = Raw material
+search.form.label.bcpg_resourceProduct      = Resource
+search.form.label.bcpg_semiFinishedProduct  = Semi finished product
+search.form.label.bcpg_supplier             = Supplier
+search.form.label.qa_batch                  = Process order
+search.form.label.qa_nc                     = Non-conformities
+search.form.label.qa_qualityControl         = Quality control
 
 status.ecm-applied          = Applied
 status.ecm-automatic        = Automatic
