Fix #22852 - [Feature] Add message when lclComment is available in other language

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
@@ -88,7 +88,7 @@ becpg.forms.help.gs1.packagingTypeCode                         = Indication du t
 becpg.forms.help.gs1.palletTypeCode                            = Indication du type de support palette utilis\u00E9.
 becpg.forms.help.gs1.platformTermsAndConditionsCode            = Code indiquant si le support est lou\u00E9, \u00E9changeable, consign\u00E9 ou perdu.
 becpg.forms.help.gs1.preparationInstructions                   = Le mode d\u2019emploi d\u2019une denr\u00E9e alimentaire est indiqu\u00E9 de fa\u00E7on \u00E0 permettre un usage appropri\u00E9 de cette denr\u00E9e
-becpg.forms.help.gs1.priceComparisonContentTypeCode            = Code indiquant le mode de calcul du prix comparatif (imprimé sur les étiquettes des rayons).
+becpg.forms.help.gs1.priceComparisonContentTypeCode            = Code indiquant le mode de calcul du prix comparatif (imprim\u00E9 sur les \u00E9tiquettes des rayons).
 becpg.forms.help.gs1.productHierarchy3                         = Brique de la classification GPC (ou Global Product Classification) \u00E0 laquelle se rattache l'unit\u00E9 commerciale d\u00E9clar\u00E9e. 
 becpg.forms.help.gs1.productHierarchy4                         = Classe de la classification IFLS \u00E0 laquelle se rattache l'unit\u00E9 commerciale d\u00E9clar\u00E9e.
 becpg.forms.help.gs1.promotionTypeCode                         = Type de promotion
@@ -462,8 +462,9 @@ form.control.spel-editor.search.enter-more                = Entrez plus de terme
 form.control.spel-editor.selected-items.empty             = Pas de donn\u00E9es
 form.control.spel-editor.show                             = Editer
 
-label.labelling.available = Etiquette disponible dans d'autres langues
-label.labelling.empty     = Aucune \u00E9tiquettes
+label.information.available = Informations disponible dans d'autres langues
+label.labelling.available   = Etiquette disponible dans d'autres langues
+label.labelling.empty       = Aucune \u00E9tiquettes
 
 message.spel-editor.failure = Erreur
 
