--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -297,6 +297,7 @@ bcpg_bcpgmodel.property.bcpg_ingTypeV2.title                              = Cat\
 bcpg_bcpgmodel.property.bcpg_instruction.title                            = Instructions
 bcpg_bcpgmodel.property.bcpg_irlCitation.title                            = Citation
 bcpg_bcpgmodel.property.bcpg_irlIng.title                                 = Ingr\u00E9dient
+bcpg_bcpgmodel.property.bcpg_irlPrecautions.title                         = Pr\u00E9cautions
 bcpg_bcpgmodel.property.bcpg_irlRestrictionLevels.title                   = Niveaux de restriction
 bcpg_bcpgmodel.property.bcpg_irlResultIndicator.title                     = Status
 bcpg_bcpgmodel.property.bcpg_irlSources.title                             = Sources
