Fix #22457 - [Feature] Answer typo fix

--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
@@ -1,24 +1,24 @@
 
-bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer1.title    = R\u00E9ponse 1
-bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer10.title   = R\u00E9ponse 10
-bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer2.title    = R\u00E9ponse 2
-bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer3.title    = R\u00E9ponse 3
-bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer4.title    = R\u00E9ponse 4
-bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer5.title    = R\u00E9ponse 5
-bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer6.title    = R\u00E9ponse 6
-bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer7.title    = R\u00E9ponse 7
-bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer8.title    = R\u00E9ponse 8
-bcpg_bcpgmodel.association.survey_advSearchSurveyAnswer9.title    = R\u00E9ponse 9
-bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion1.title  = Question 1
-bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion10.title = Question 10
-bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion2.title  = Question 2
-bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion3.title  = Question 3
-bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion4.title  = Question 4
-bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion5.title  = Question 5
-bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion6.title  = Question 6
-bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion7.title  = Question 7
-bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion8.title  = Question 8
-bcpg_bcpgmodel.association.survey_advSearchSurveyQuestion9.title  = Question 9
+survey_surveymodel.association.survey_advSearchSurveyAnswer1.title    = R\u00E9ponse 1
+survey_surveymodel.association.survey_advSearchSurveyAnswer10.title   = R\u00E9ponse 10
+survey_surveymodel.association.survey_advSearchSurveyAnswer2.title    = R\u00E9ponse 2
+survey_surveymodel.association.survey_advSearchSurveyAnswer3.title    = R\u00E9ponse 3
+survey_surveymodel.association.survey_advSearchSurveyAnswer4.title    = R\u00E9ponse 4
+survey_surveymodel.association.survey_advSearchSurveyAnswer5.title    = R\u00E9ponse 5
+survey_surveymodel.association.survey_advSearchSurveyAnswer6.title    = R\u00E9ponse 6
+survey_surveymodel.association.survey_advSearchSurveyAnswer7.title    = R\u00E9ponse 7
+survey_surveymodel.association.survey_advSearchSurveyAnswer8.title    = R\u00E9ponse 8
+survey_surveymodel.association.survey_advSearchSurveyAnswer9.title    = R\u00E9ponse 9
+survey_surveymodel.association.survey_advSearchSurveyQuestion1.title  = Question 1
+survey_surveymodel.association.survey_advSearchSurveyQuestion10.title = Question 10
+survey_surveymodel.association.survey_advSearchSurveyQuestion2.title  = Question 2
+survey_surveymodel.association.survey_advSearchSurveyQuestion3.title  = Question 3
+survey_surveymodel.association.survey_advSearchSurveyQuestion4.title  = Question 4
+survey_surveymodel.association.survey_advSearchSurveyQuestion5.title  = Question 5
+survey_surveymodel.association.survey_advSearchSurveyQuestion6.title  = Question 6
+survey_surveymodel.association.survey_advSearchSurveyQuestion7.title  = Question 7
+survey_surveymodel.association.survey_advSearchSurveyQuestion8.title  = Question 8
+survey_surveymodel.association.survey_advSearchSurveyQuestion9.title  = Question 9
 
 survey_surveymodel.association.survey_fsLinkedCharactRefs.title = Charact\u00E9ristiques li\u00E9es
 survey_surveymodel.association.survey_fsLinkedHierarchy.title   = Familles li\u00E9es
